# SigmAIQ

./: .gitignore  Makefile  README.md  generate_readme_tables.py  pyproject.toml  requirements.txt
.github/workflows/: release-test.yml  release.yml  test.yml
examples/: custom_field_mappings.py  llm_basic_usage.py  llm_rule_translation_and_creation.py  translate_sigma_rules.py
requirements/: common.txt  dev.txt  llm.txt
sigmaiq/: .gitignore  __init__.py  exceptions.py  globals.py  sigmaiq_backend_factory.py  sigmaiq_pipeline_factory.py
sigmaiq/backends/: sigmaiq_abstract_backend.py
sigmaiq/backends/carbonblack/: __init__.py  carbonblack.py
sigmaiq/backends/cortexxdr/: __init__.py  cortexxdr.py
sigmaiq/backends/crowdstrike/: __init__.py  crowdstrike.py
sigmaiq/backends/elasticsearch/: __init__.py  elasticsearch.py
sigmaiq/backends/insightidr/: __init__.py  insightidr.py
sigmaiq/backends/kusto/: __init__.py  kusto.py
sigmaiq/backends/loki/: __init__.py  loki.py
sigmaiq/backends/microsoft365defender/: __init__.py  microsoft365defender.py
sigmaiq/backends/netwitness/: __init__.py  netwitness.py
sigmaiq/backends/opensearch/: __init__.py  opensearch.py
sigmaiq/backends/qradar/: __init__.py  qradar.py
sigmaiq/backends/secops/: __init__.py  secops.py
sigmaiq/backends/sentinelone/: __init__.py  sentinelone.py
sigmaiq/backends/sigma/: __init__.py  sigma.py
sigmaiq/backends/splunk/: __init__.py  savedsearches_template.txt  splunk.py
sigmaiq/backends/stix/: __init__.py  stix.py
sigmaiq/llm/: README.md  base.py
sigmaiq/llm/toolkits/: base.py  prompts.py  sigma_toolkit.py
sigmaiq/llm/tools/: create_sigma_rule.py  find_sigma_rule.py  query_to_sigma_rule.py  translate_sigma_rule.py
sigmaiq/pipelines/splunk_windows_audit/: __init__.py  splunk_wineventlog.py
sigmaiq/utils/sigma/: rule_updater.py
sigmaiq/utils/sigmaiq/: sigmaiq_utils.py
tests/: test_backend_factory.py  test_llm_components.py  test_pipeline_factory.py  test_sigmaiq_utils.py
tests/files/: sigma_collection_outputs.json  sigma_rule_outputs.json
