[tool.poetry]
name = "SigmAIQ"
version = "0.4.1"
description = "Wrapper and tools for pySigma and Sigma rules"
authors = ["Stephen Lincoln <stephen.lincoln@attackiq.com>", "AttackIQ <support@attackiq.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security"
]

packages = [
    { include = "sigmaiq" }
]

[tool.poetry.dependencies]
python = ">=3.8.1, <=3.11.6"
certifi = "*"
pysigma = "^0.11.3"
pysigma-backend-carbonblack = "^0.1.6"
pysigma-backend-cortexxdr = "0.1.2" # RS pinning this to avoid exception, try again after few weeks
pysigma-backend-elasticsearch = "^01.0.12"
#pysigma-backend-insightidr = "^0.2.2"
pysigma-backend-loki = "^0.11.0"
pysigma-backend-microsoft365defender = "^0.2.4"
pysigma-backend-opensearch = "^1.0.2"
pysigma-backend-qradar-aql = "^0.3.2"
pysigma-backend-sentinelone = "^0.1.3"
pysigma-backend-splunk = "^1.0.3"
pysigma-backend-stix2 = {git="https://github.com/slincoln-aiq/pySigma-backend-stix"}
pysigma-pipeline-crowdstrike = "^1.0.3"
pysigma-pipeline-sysmon = "^1.0.4"
pysigma-pipeline-windows = "^1.2.0"
importlib-resources = "*"
langchain = "0.2.9"
openai = "*"
tiktoken = "*"
faiss-cpu = "*"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.17"
pydantic = "<2.0.0"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.run]
omit = [
    # omit anything in a tests directory
    "tests/*",
    # omit everything in LLM
    "sigmaiq/llm/*",
    # omit globals
    "sigmaiq/globals.py",
    ]