[tool.poetry]
name = "SigmAIQ"
version = "0.4.3"
description = "Wrapper and tools for pySigma and Sigma rules"
authors = ["Stephen Lincoln <stephen.lincoln@attackiq.com>", "AttackIQ <support@attackiq.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security"
]

packages = [
    { include = "sigmaiq" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.14"
pysigma = "0.11.17"
certifi = "^2024.8.30"
pysigma-backend-carbonblack = "0.1.8"
pysigma-backend-cortexxdr = "0.1.4"
pysigma-backend-crowdstrike = "2.0.0"
pysigma-backend-elasticsearch = "1.1.2"
pysigma-backend-insightidr = "0.2.4"
pysigma-backend-kusto = "0.4.2"
pysigma-backend-loki = "0.12.2"  
pysigma-backend-netwitness = "0.1.3"
pysigma-backend-opensearch = "1.0.2"
pysigma-backend-qradar-aql = "0.3.2"
pysigma-backend-sentinelone = "0.1.3"
pysigma-backend-splunk = "1.1.0"
pysigma-backend-stix2 = "0.2.0"
pysigma-pipeline-sysmon = "1.0.4"
pysigma-pipeline-windows = "1.2.0"
importlib-resources = "^5.13.0"

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
langchain = "^0.2.9"
openai = "*"
tiktoken = "*"
faiss-cpu = "*"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.17"
langchain-core = "^0.2.20"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^24.8.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".venv"
]

# Same as Black.
line-length = 120

# Assume Python 3.11
target-version = "py311"

[tool.coverage.run]
omit = [
    # omit anything in a tests directory
    "tests/*",
    # omit globals
    "sigmaiq/globals.py",
    ]