[tool.poetry]
name = "attackiq-sigmaiq"
version = "0.4.35-dev"
description = "Wrapper and tools for pySigma and Sigma rules"
authors = ["Stephen Lincoln <stephen.lincoln@attackiq.com>", "AttackIQ <support@attackiq.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security"
]

packages = [
    { include = "sigmaiq" }
]

[tool.poetry.dependencies]
python = ">=3.9, <=3.12"
six = "*"
pysigma = "^0.11.14"
certifi = "*"
pysigma-backend-carbonblack = "^0.1.8"
pysigma-backend-cortexxdr = "^0.1.4"
pysigma-backend-crowdstrike = "^2.0.0"
pysigma-backend-elasticsearch = "^1.1.2"
pysigma-backend-insightidr = "^0.2.4"
pysigma-backend-kusto = "^0.4.0"
pysigma-backend-loki = "^0.12.0"
pysigma-backend-netwitness = "^0.1.3"
pysigma-backend-opensearch = "^1.0.2"
pysigma-backend-qradar-aql = "^0.3.2"
pysigma-backend-sentinelone = "^0.1.3"
pysigma-backend-splunk = "^1.1.0"
pysigma-backend-stix2 = "^0.2.0"
pysigma-pipeline-sysmon = "^1.0.4"
pysigma-pipeline-windows = "^1.2.0"
importlib-resources = "*"
openai = "*"
tiktoken = "*"
faiss-cpu = "*"
langchain = "*"
langchain-community = "*"
langchain-openai = "*"
langchain-core = "*"
pysigma-backend-secops = "0.1.4"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
ruff = "*"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
twine = "^6.1.0"
keyring = "^25.6.0"
keyrings-alt = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.coverage.run]
omit = [
    # omit anything in a tests directory
    "tests/*",
    # omit everything in LLM
    "sigmaiq/llm/*",
    # omit globals
    "sigmaiq/globals.py",
    ]